Finalizando documentação da api
