# api-restaurante/src/routes/user.route.js
@@ -6,8 +6,8 @@ import { validId, validUser } from "../middlewares/global.middlewares.js";
 const router = Router();
 
 router.post("/", userController.create);
-router.get("/", userController.findAll);
-router.get("/:id", validId, validUser, userController.findById);
+router.get("/", authMiddleware, userController.findAll);
+router.get("/:id", authMiddleware, validId, validUser, userController.findById);
 router.patch("/:id", authMiddleware, validId, validUser, userController.update);
 
 export default router;
